syntax = "proto3";

option go_package = "github.com/bloXroute-Labs/bxgateway-private-go/bxgateway/gateway";

// The gateway service definition.
package  gateway;
service Gateway {
  rpc NewTxs (NewTxsRequest) returns (stream NewTxsReply){}
  rpc PendingTxs (PendingTxsRequest) returns (stream PendingTxsReply){}
  rpc NewBlocks (BlocksRequest) returns (stream BlocksReply){}
  rpc BdnBlocks (BlocksRequest) returns (stream BlocksReply){}

}

message NewTxsRequest{
  string filters = 1;
}

message Tx{
  string hash = 1;
  string subscriptionID = 2;
  string nonce = 3;
  string gas_price = 4;
  string gas = 5;
  string to = 6;
  string value = 7;
  string input = 8;
  string v = 9;
  string r = 10;
  string s = 11;
  string from = 12;
  string type = 13;
  string local_region = 14;
  string time = 15;
  string raw_tx = 16;
  string max_fee_per_gas = 17;
  string max_priority_fee_per_gas = 18;
  string chainID = 19;
  repeated AccessTuple access_list = 20;
}

message AccessTuple{
  string address = 1;
  repeated string storage_keys = 2;
}

message BlockTx{
  string hash = 1;
  string nonce = 2;
  string gas_price = 3;
  string gas = 4;
  string to = 5;
  string value = 6;
  string input = 7;
  string v = 8;
  string r = 9;
  string s = 10;
  string from = 11;
  string type = 12;
  string chainID = 13;
  string max_fee_per_gas = 14;
  string max_priority_fee_per_gas = 15;
  repeated AccessTuple access_list = 16;
}

message NewTxsReply{
  repeated Tx tx = 1;
}

message PendingTxsRequest{
  string filters = 1;
}

message PendingTxsReply{
  repeated Tx tx = 1;
}

message BlocksRequest{}

message BlockHeader{
  string parent_hash = 1;
  string sha3_uncles = 2;
  string miner = 3;
  string state_root = 4;
  string transactions_root = 5;
  string receipts_root = 6;
  string logs_bloom = 7;
  string difficulty = 8;
  string number = 9;
  string gas_limit = 10;
  string gas_used = 11;
  string timestamp = 12;
  string extra_data = 13;
  string mix_hash = 14;
  string nonce = 15;
  string base_fee_per_gas = 16;
}

message FutureValidatorInfo{
  string block_height = 1;
  string wallet_id = 2;
  string accessible = 3;
}

message BlocksReply{
  string hash = 1;
  string subscriptionID = 2;
  BlockHeader header = 3;
  repeated FutureValidatorInfo future_validator_info = 4;
  repeated BlockTx transaction = 5;
}
